@@ -6,13 +6,14 @@
  */
 package org.gridsuite.modification.server.modifications;
 
-import com.powsybl.commons.reporter.Reporter;
-import com.powsybl.commons.reporter.TypedValue;
+import com.powsybl.commons.report.ReportNode;
+import com.powsybl.commons.report.TypedValue;
 import com.powsybl.iidm.modification.scalable.Scalable;
 import com.powsybl.iidm.modification.scalable.ScalingParameters;
 import com.powsybl.iidm.network.Load;
 import com.powsybl.iidm.network.Network;
 import org.gridsuite.modification.server.NetworkModificationException;
+import org.gridsuite.modification.server.VariationMode;
 import org.gridsuite.modification.server.VariationType;
 import org.gridsuite.modification.server.dto.IdentifiableAttributes;
 import org.gridsuite.modification.server.dto.LoadScalingInfos;
@@ -23,12 +24,8 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
-
-import static org.gridsuite.modification.server.NetworkModificationException.Type.LOAD_SCALING_ERROR;
-import static org.gridsuite.modification.server.modifications.ModificationUtils.createReport;
 
 /**
  * @author bendaamerahm <ahmed.bendaamer at rte-france.com>
@@ -40,31 +37,34 @@ public class LoadScaling extends AbstractScaling {
     }
 
     @Override
-    protected void applyVentilationVariation(Network network, Reporter subReporter, List<IdentifiableAttributes> identifiableAttributes, ScalingVariationInfos scalingVariationInfos, Double distributionKeys) {
+    protected void applyVentilationVariation(Network network, ReportNode subReportNode, List<IdentifiableAttributes> identifiableAttributes, ScalingVariationInfos scalingVariationInfos, Double distributionKeys) {
         if (distributionKeys != null) {
             AtomicReference<Double> sum = new AtomicReference<>(0D);
             List<Double> percentages = new ArrayList<>();
             List<Scalable> scalables = new ArrayList<>();
 
             identifiableAttributes.forEach(equipment -> {
-                sum.set(network.getLoad(equipment.getId()).getP0() + sum.get());
-                scalables.add(getScalable(equipment.getId()));
-                percentages.add((equipment.getDistributionKey() / distributionKeys) * 100);
+                Load load = network.getLoad(equipment.getId());
+                if (ModificationUtils.isInjectionConnected(load)) {
+                    sum.set(load.getP0() + sum.get());
+                    scalables.add(getScalable(equipment.getId()));
+                    percentages.add((equipment.getDistributionKey() / distributionKeys) * 100);
+                }
             });
             Scalable ventilationScalable = Scalable.proportional(percentages, scalables);
             var asked = getAsked(scalingVariationInfos, sum);
             var done = scale(network, scalingVariationInfos, asked, ventilationScalable);
-            createReport(subReporter, "scalingApplied", String.format("Successfully scaling variation in ventilation mode with variation value asked is %s and variation done is %s", asked, done), TypedValue.INFO_SEVERITY);
+            reportScaling(subReportNode, scalingVariationInfos.getVariationMode(), asked, done);
         }
     }
 
     @Override
-    protected void applyRegularDistributionVariation(Network network, Reporter subReporter, List<IdentifiableAttributes> identifiableAttributes, ScalingVariationInfos scalingVariationInfos) {
+    protected void applyRegularDistributionVariation(Network network, ReportNode subReportNode, List<IdentifiableAttributes> identifiableAttributes, ScalingVariationInfos scalingVariationInfos) {
         List<Load> loads = identifiableAttributes
                 .stream()
                 .map(attribute -> network.getLoad(attribute.getId()))
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .filter(ModificationUtils::isInjectionConnected)
+                .toList();
 
         AtomicReference<Double> sum = new AtomicReference<>(0D);
 
@@ -78,13 +78,15 @@ public class LoadScaling extends AbstractScaling {
         Scalable regularDistributionScalable = Scalable.proportional(percentages, scalables);
         var asked = getAsked(scalingVariationInfos, sum);
         var done = scale(network, scalingVariationInfos, asked, regularDistributionScalable);
-        createReport(subReporter, "scalingApplied", String.format("Successfully scaling variation in regular Distribution mode with variation value asked is %s and variation done is %s", asked, done), TypedValue.INFO_SEVERITY);
+        reportScaling(subReportNode, scalingVariationInfos.getVariationMode(), asked, done);
     }
 
     @Override
-    protected void applyProportionalVariation(Network network, Reporter subReporter, List<IdentifiableAttributes> identifiableAttributes, ScalingVariationInfos scalingVariationInfos) {
-        List<Load> loads = identifiableAttributes
-                .stream().map(attribute -> network.getLoad(attribute.getId())).collect(Collectors.toList());
+    protected void applyProportionalVariation(Network network, ReportNode subReportNode, List<IdentifiableAttributes> identifiableAttributes, ScalingVariationInfos scalingVariationInfos) {
+        List<Load> loads = identifiableAttributes.stream()
+                .map(attribute -> network.getLoad(attribute.getId()))
+                .filter(ModificationUtils::isInjectionConnected)
+                .toList();
         AtomicReference<Double> sum = new AtomicReference<>(0D);
         Map<String, Double> targetPMap = new HashMap<>();
         List<Double> percentages = new ArrayList<>();
@@ -101,30 +103,28 @@ public class LoadScaling extends AbstractScaling {
         Scalable proportionalScalable = Scalable.proportional(percentages, scalables);
         var asked = getAsked(scalingVariationInfos, sum);
         var done = scale(network, scalingVariationInfos, asked, proportionalScalable);
-        createReport(subReporter, "scalingApplied", String.format("Successfully scaling variation in proportional mode with variation value asked is %s and variation done is %s", asked, done), TypedValue.INFO_SEVERITY);
+        reportScaling(subReportNode, scalingVariationInfos.getVariationMode(), asked, done);
     }
 
     @Override
-    protected void applyProportionalToPmaxVariation(Network network, Reporter subReporter, List<IdentifiableAttributes> identifiableAttributes, ScalingVariationInfos scalingVariationInfos) {
+    protected void applyProportionalToPmaxVariation(Network network, ReportNode subReportNode, List<IdentifiableAttributes> identifiableAttributes, ScalingVariationInfos scalingVariationInfos) {
         // no implementation for load scaling
         throw new NetworkModificationException(scalingInfos.getErrorType(), String.format("This variation mode is not supported : %s", scalingVariationInfos.getVariationMode().name()));
     }
 
     @Override
-    protected void applyStackingUpVariation(Network network, Reporter subReporter, List<IdentifiableAttributes> identifiableAttributes, ScalingVariationInfos scalingVariationInfos) {
+    protected void applyStackingUpVariation(Network network, ReportNode subReportNode, List<IdentifiableAttributes> identifiableAttributes, ScalingVariationInfos scalingVariationInfos) {
         // no implementation for load scaling
         throw new NetworkModificationException(scalingInfos.getErrorType(), String.format("This variation mode is not supported : %s", scalingVariationInfos.getVariationMode().name()));
     }
 
     private double scale(Network network, ScalingVariationInfos scalingVariationInfos, double asked, Scalable proportionalScalable) {
-        switch (scalingVariationInfos.getReactiveVariationMode()) {
-            case CONSTANT_Q:
-                return proportionalScalable.scale(network, asked, new ScalingParameters().setScalingConvention(Scalable.ScalingConvention.LOAD));
-            case TAN_PHI_FIXED:
-                return proportionalScalable.scale(network, asked, new ScalingParameters().setScalingConvention(Scalable.ScalingConvention.LOAD).setConstantPowerFactor(true));
-            default:
-                throw new NetworkModificationException(LOAD_SCALING_ERROR, "Reactive Variation mode not recognised");
-        }
+        return switch (scalingVariationInfos.getReactiveVariationMode()) {
+            case CONSTANT_Q ->
+                    proportionalScalable.scale(network, asked, new ScalingParameters().setScalingConvention(Scalable.ScalingConvention.LOAD));
+            case TAN_PHI_FIXED ->
+                    proportionalScalable.scale(network, asked, new ScalingParameters().setScalingConvention(Scalable.ScalingConvention.LOAD).setConstantPowerFactor(true));
+        };
     }
 
     @Override
@@ -139,4 +139,13 @@ public class LoadScaling extends AbstractScaling {
         return Scalable.onLoad(id, -Double.MAX_VALUE, Double.MAX_VALUE);
     }
 
+    private void reportScaling(ReportNode subReportNode, VariationMode variationMode, double askedValue, double actualValue) {
+        subReportNode.newReportNode()
+                .withMessageTemplate("scalingApplied", "Successfully scaling variation in ${variationMode} mode with variation value asked is ${askedValue} and variation done is ${actualValue}")
+                .withUntypedValue("variationMode", variationMode.name())
+                .withUntypedValue("askedValue", askedValue)
+                .withUntypedValue("actualValue", actualValue)
+                .withSeverity(TypedValue.INFO_SEVERITY)
+                .add();
+    }
 }
